# otus_open_data_analysis

./: README.md  pyproject.toml
open_data_analysis/: analysis.ipynb  homework.ipynb
